# cocaine-plugins

./: .project  CMakeLists.txt
auth/: CMakeLists.txt  README.md
auth/include/cocaine/service/: auth.hpp
auth/include/cocaine/service/auth/: authenticate.hpp  authentication.hpp  authorization.hpp  directory.hpp  realm.hpp  storage.hpp
auth/include/cocaine/service/auth/authentication/: base.hpp  md5.hpp  plain.hpp
auth/include/cocaine/service/auth/authorization/: permissions.hpp
auth/include/cocaine/service/auth/directory/: base.hpp  permissions.hpp  user.hpp
auth/include/cocaine/service/auth/storage/: abstract_storage.hpp  base.hpp  cocaine_storage.hpp  common.hpp  memory_storage.hpp  storages.hpp
auth/src/: auth.cpp  module.cpp  realm.cpp
auth/src/authentication/: md5.cpp  plain.cpp
auth/src/authorization/: permissions.cpp
auth/src/directory/: base.cpp  directory.cpp  permissions.cpp  user.cpp
auth/src/storage/: abstract_storage.cpp  base.cpp  cocaine_storage.cpp  memory_storage.cpp
auth/test_app/: test_app.py
auth/tools/: auth_client.py  commands.py  setup.py
auth/unique_id/: unique_id.cpp  unique_id.hpp
cmake/modules/: FindLibNL.cmake
debian/: control  libcocaine-plugin-auth2.install  libcocaine-plugin-debugger.install  libcocaine-plugin-git2.install
debugger/: CMakeLists.txt
debugger/include/cocaine/idl/: debugger.hpp
debugger/include/cocaine/service/: debugger.hpp
debugger/src/: debugger.cpp  module.cpp
debugger/tester_app/: tester_app.py  tester_app.rb
git/: CMakeLists.txt  README.md
git/cmake/: FindLibgit2.cmake
git/include/cocaine/idl/: git.hpp
git/include/cocaine/service/: git.hpp
git/include/cocaine/service/git/: cocaine_odb_backend.hpp  repository.hpp
git/src/: cocaine_odb_backend.cpp  cocaine_refdb_backend.cpp  git.cpp  module.cpp  repository.cpp
git/src/git/: cocaine_odb_backend.cpp  repository.cpp
git/tools/: git_client.py
ipvs/: CMakeLists.txt  config.hpp.in  gateway.cpp  gateway.hpp
ipvs/include/cocaine/: config.hpp  gateway.hpp
ipvs/libipvs-1.26/: CMakeLists.txt
ipvs/src/: gateway.cpp  module.cpp
logstash/: CMakeLists.txt
logstash/include/cocaine/logging/formatters/: logstash.hpp
logstash/src/: logstash.cpp  module.cpp
